fix: #58 courses dont spill under calendar anymore

--- a/src/pages/Dashboard/Admin/components/tab/adminTab.module.scss
+++ b/src/pages/Dashboard/Admin/components/tab/adminTab.module.scss
@@ -6,12 +6,16 @@
 .tab {
   // margin-top: fn.rem(41);
   width: 100%;
+  .hr {
+    filter: opacity(50%);
+  }
 
   .tabList {
     @include flex;
     flex-wrap: nowrap;
     width: 100%;
-    border-bottom: 1px solid colors.$light-grey;
+    max-width: 59rem;
+    // border-bottom: 1px solid colors.$light-grey;
     margin: auto;
     overflow-x: auto;
     @include breakpoint-up('lg') {
